# ethercat_ROS2

./: README.md  ethercat_setup.sh  ros2_driver_setup.sh
src/zeroerr_driver_ros2/: CMakeLists.txt
src/zeroerr_driver_ros2/config/: controllers.yaml  zeroerr_config.yaml
src/zeroerr_driver_ros2/description/ros2_control/: motor_drive.ros2_control.xacro
src/zeroerr_driver_ros2/launch/: motor_drive.launch.py
zeroerr_driver_ros2/: package.xml
zeroerr_driver_ros2/config/: controllers.yaml
zeroerr_driver_ros2/description/config/: motor_drive.config.xacro
zeroerr_driver_ros2/description/ros2_control/: motor_drive.ros2_control.xacro
