<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_zeroerr</name>
  <version>1.0.0</version>
  <description> Package for ZeroErr control in ROS2+ethercat</description>
  <maintainer email="alessandro1sofia@gmail.com">Alessandro Sofia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_cia402_drive</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
